--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "test-playwright": "playwright test"
   },
   "dependencies": {
+    "compressorjs": "^1.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
