--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "compilerOptions": {
-    "types": ["jest", "node", "@testing-library/jest-dom"], // Jest, Node.js, Jest DOMの型定義を追加
+    "types": [
+      "jest",
+      "node",
+      "@testing-library/jest-dom",
+      "react-router-dom",
+      "react-hook-form"
+    ], // 追加
     "module": "ESNext",
     "target": "ESNext",
     "strict": true,
